@@ -1,28 +1,29 @@
 package uniresolver.web.servlet;
 
-import java.io.IOException;
-import java.net.URLDecoder;
-import java.util.List;
+import org.apache.http.entity.ContentType;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.MediaType;
+import uniresolver.ResolutionException;
+import uniresolver.driver.util.HttpBindingServerUtil;
+import uniresolver.result.ResolveResult;
+import uniresolver.util.HttpBindingUtil;
+import uniresolver.util.ResolveResultUtil;
+import uniresolver.web.WebUniResolver;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import foundation.identity.did.DIDDocument;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import org.springframework.http.MediaType;
-import uniresolver.result.ResolveResult;
-import uniresolver.web.WebUniResolver;
+import java.io.IOException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class ResolveServlet extends WebUniResolver {
 
-	private static final long serialVersionUID = 1579362184113490816L;
-
-	protected static Logger log = LoggerFactory.getLogger(ResolveServlet.class);
-
-	public static final String MIME_TYPE = "application/json";
+	protected static final Logger log = LoggerFactory.getLogger(ResolveServlet.class);
 
 	@Override
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -38,24 +39,34 @@ public class ResolveServlet extends WebUniResolver {
 
 		String identifier = requestPath.substring(contextPath.length() + servletPath.length());
 		if (identifier.startsWith("/")) identifier = identifier.substring(1);
-
-		try {
-
-			identifier = URLDecoder.decode(identifier, "UTF-8");
-		} catch (Exception ex) {
-
-			if (log.isWarnEnabled()) log.warn("Request problem: " + ex.getMessage(), ex);
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, null, "Request problem: " + ex.getMessage());
-			return;
-		}
+		identifier = URLDecoder.decode(identifier, StandardCharsets.UTF_8);
 
 		if (log.isInfoEnabled()) log.info("Incoming resolve request for identifier: " + identifier);
 
 		if (identifier == null) {
 
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_BAD_REQUEST, null, "No identifier found in resolve request.");
+			ServletUtil.sendResponse(response, HttpServletResponse.SC_BAD_REQUEST, null, "No identifier found in resolve request.");
 			return;
 		}
+
+		// assume identifier is a DID
+
+		String didString = identifier;
+
+		// prepare resolution options
+
+		String httpAcceptHeader = request.getHeader("Accept");
+		if (log.isInfoEnabled()) log.info("Incoming Accept: header string: " + httpAcceptHeader);
+
+		List<MediaType> httpAcceptMediaTypes = MediaType.parseMediaTypes(httpAcceptHeader != null ? httpAcceptHeader : ResolveResult.MEDIA_TYPE);
+		MediaType.sortBySpecificityAndQuality(httpAcceptMediaTypes);
+
+		String accept = HttpBindingServerUtil.acceptForHttpAcceptMediaTypes(httpAcceptMediaTypes);
+
+		Map<String, Object> resolutionOptions = new HashMap<>();
+		resolutionOptions.put("accept", accept);
+
+		if (log.isDebugEnabled()) log.debug("Using resolution options: " + resolutionOptions);
 
 		// execute the request
 
@@ -63,62 +74,69 @@ public class ResolveServlet extends WebUniResolver {
 
 		try {
 
-			resolveResult = this.resolve(identifier);
+			resolveResult = this.resolveRepresentation(didString, resolutionOptions);
 		} catch (Exception ex) {
 
-			if (log.isWarnEnabled()) log.warn("Resolve problem for " + identifier + ": " + ex.getMessage(), ex);
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, null, "Resolve problem for " + identifier + ": " + ex.getMessage());
+			if (log.isWarnEnabled()) log.warn("Resolve problem for " + didString + ": " + ex.getMessage(), ex);
+
+			if (ex instanceof ResolutionException && ((ResolutionException) ex).getResolveResult() != null) {
+				resolveResult = ((ResolutionException) ex).getResolveResult();
+			} else {
+				resolveResult = ResolveResult.makeErrorResolveRepresentationResult(ResolveResult.ERROR_INTERNALERROR, "Resolve problem for " + didString + ": " + ex.getMessage(), accept);
+			}
+
+			ServletUtil.sendResponse(response, HttpBindingServerUtil.httpStatusCodeForResolveResult(resolveResult), null, HttpBindingServerUtil.toHttpBodyResolveResult(resolveResult));
 			return;
 		}
 
-		if (log.isInfoEnabled()) log.info("Resolve result for " + identifier + ": " + resolveResult);
+		if (log.isInfoEnabled()) log.info("Resolve result for " + didString + ": " + resolveResult);
 
 		// no resolve result?
 
-		if (resolveResult == null || (resolveResult.getDidDocument() == null && resolveResult.getContent() == null)) {
+		if (resolveResult == null || resolveResult.getDidDocumentStream() == null) {
 
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No resolve result for " + identifier + ": " + resolveResult);
+			resolveResult = ResolveResult.makeErrorResolveRepresentationResult(ResolveResult.ERROR_NOTFOUND, "No resolve result for " + didString, accept);
+			ServletUtil.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null,  HttpBindingServerUtil.toHttpBodyResolveResult(resolveResult));
 			return;
 		}
 
 		// write resolve result
 
-		String acceptHeader = request.getHeader("Accept");
-		List<MediaType> acceptMediaTypes = MediaType.parseMediaTypes(acceptHeader != null ? acceptHeader : "*/*");
-		MediaType.sortBySpecificityAndQuality(acceptMediaTypes);
+		for (MediaType acceptMediaType : httpAcceptMediaTypes) {
 
-		for (MediaType acceptMediaType : acceptMediaTypes) {
+			if (HttpBindingServerUtil.isMediaTypeAcceptable(acceptMediaType, MediaType.valueOf(ResolveResult.MEDIA_TYPE))) {
 
-			if (log.isDebugEnabled()) log.warn("Trying to find content for media type " + acceptMediaType);
-
-			if (acceptMediaType.includes(MediaType.valueOf(ResolveResult.MIME_TYPE))) {
-
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, ResolveResult.MIME_TYPE, resolveResult.toJson());
+				ServletUtil.sendResponse(response, HttpBindingServerUtil.httpStatusCodeForResolveResult(resolveResult), ResolveResult.MEDIA_TYPE, HttpBindingServerUtil.toHttpBodyResolveResult(resolveResult));
 				return;
-			} else if (acceptMediaType.includes(MediaType.valueOf(DIDDocument.MIME_TYPE_JSON_LD))) {
+			} else {
 
-				if (resolveResult.getDidDocument() == null) {
+				if (!HttpBindingServerUtil.isMediaTypeAcceptable(acceptMediaType, MediaType.valueOf(resolveResult.getContentType()))) {
 
-					WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No DID document for " + identifier);
-					return;
+					// try to convert
+
+					String sourceMediaType = resolveResult.getContentType();
+					String targetMediaType = HttpBindingUtil.representationMediaTypeForMediaType(ContentType.parse(acceptMediaType.toString()).getMimeType());
+					if (targetMediaType == null) {
+						if (log.isDebugEnabled()) log.debug("Cannot convert resolve result from " + sourceMediaType + " to " + targetMediaType);
+						continue;
+					} else {
+						if (log.isDebugEnabled()) log.debug("Attempting to convert resolve result from " + sourceMediaType + " to " + targetMediaType);
+					}
+
+					try {
+						resolveResult = ResolveResultUtil.convertToResolveRepresentationResult(ResolveResultUtil.convertToResolveResult(resolveResult), targetMediaType);
+						resolveResult.getDidResolutionMetadata().put("convertedFrom", sourceMediaType);
+						resolveResult.getDidResolutionMetadata().put("convertedTo", targetMediaType);
+					} catch (ResolutionException ex) {
+						throw new IOException(ex.getMessage(), ex);
+					}
 				}
 
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, DIDDocument.MIME_TYPE_JSON_LD, resolveResult.getDidDocument().toJson());
-				return;
-			} else if (resolveResult.getContentType() != null && acceptMediaType.includes(MediaType.valueOf(resolveResult.getContentType()))) {
-
-				if (resolveResult.getContent() == null) {
-
-					WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No content for " + identifier);
-					return;
-				}
-
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, resolveResult.getContentType(), resolveResult.getContent());
+				ServletUtil.sendResponse(response, HttpBindingServerUtil.httpStatusCodeForResolveResult(resolveResult), resolveResult.getContentType(), resolveResult.getDidDocumentStream());
 				return;
 			}
 		}
 
-		WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_ACCEPTABLE, null, "Not acceptable media type " + acceptHeader);
-		return;
+		ServletUtil.sendResponse(response, HttpServletResponse.SC_NOT_ACCEPTABLE, null, "Not acceptable media type " + httpAcceptHeader);
 	}
 }
